Added the body content

--- a/index.html
+++ b/index.html
@@ -8,6 +8,50 @@
   <meta name="viewport" content="width=device-width;initial-scale=1">
 </head>
 <body>
+		<article>
+
+	<header>
+		<h1></h1>
+			<strong>$35</strong>
+			<m>(in-stock)</m>
+	</header>
+
+	<img src="" alt="bounding box">
+
+	<dl>
+		<dt>Age:</dt>
+			<dd>8+</dd>
+		<dt>Number Players:</dt>
+			<dd>2-5</dd>
+		<dt>Length:</dt>
+			<dd>45 min</dd>
+	</dl>
+
+	<h2>Average Rating:</h2>
+		<meter min="0" max="5" value="4">4/5</meter>
+
+	<footer>
+		<dl>
+			<dt>Status:</dt>
+			<dd>In print<dd>
+				<ol>
+					<li>Area Controls</li>
+					<li>Educational</li>
+
+					<ul>2012 Spiel of the Year Winner</ul>
+				</ol>
+
+				</dl>
+	</footer>
+
+	<aside>
+	<article>
+	<h2>Reviews</h2>
+	<h3>Thomas Schweitzer</h3>
+	</article>
+	</aside>
+
+	</article>
 
 </body>
 </html>
