--- a/index.html
+++ b/index.html
@@ -13,18 +13,18 @@
 	<header>
 		<h1></h1>
 			<strong>$35</strong>
-			<m>(in-stock)</m>
+			<em>(in-stock)</em>
 	</header>
 
 	<img src="placeholder-4by3.svg" alt="bounding box">
 
 	<dl>
 		<dt>Age:</dt>
-			<dd>8+</dd>
+		<dd>8+</dd>
 		<dt>Number Players:</dt>
-			<dd>2-5</dd>
+		<dd>2-5</dd>
 		<dt>Length:</dt>
-			<dd>45 min</dd>
+		<dd>45 min</dd>
 	</dl>
 
 	<h2>Average Rating:</h2>
@@ -33,9 +33,9 @@
 	<footer>
 		<dl>
 			<dt>Status:</dt>
-				<dd>In print</dd>
+			<dd>In print</dd>
 			<dt>Categories:</dt>
-				<dd>
+			<dd>
 					<ol>
 					<li>Area Controls</li>
 					<li>Educational</li>
@@ -53,7 +53,9 @@
 			<dt>Year:</dt>
 				<dd>2011</dd>
 			<dt>Awards</dt>
-					<ul>2012 Spiel of the Year Winner</ul>
+					<ul>
+						<li>2012 Spiel of the Year Winner</li>
+						</ul>
 			</dl>
 	</footer>
 
