More correction for Markbot

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<article>
 
 	<header>
-		<h1></h1>
+		<h1>Super Epic Tile Layer</h1>
 			<strong>$35</strong>
 			<em>(in-stock)</em>
 	</header>
@@ -36,7 +36,7 @@
 			<dd>In print</dd>
 			<dt>Categories:</dt>
 			<dd>
-					<ol>
+				<ol>
 					<li>Area Controls</li>
 					<li>Educational</li>
 					<li>Historical</li>
@@ -47,16 +47,18 @@
 				</ol>
 			</dd>
 			<dt>Publisher:</dt>
-				<dd>AwesomeSpiel</dd>
+			<dd>AwesomeSpiel</dd>
 			<dt>Designer:</dt>
-				<dd>Kerstin Eichelberger</dd>
+			<dd>Kerstin Eichelberger</dd>
 			<dt>Year:</dt>
-				<dd>2011</dd>
+			<dd>2011</dd>
 			<dt>Awards</dt>
-					<ul>
-						<li>2012 Spiel of the Year Winner</li>
-						</ul>
-			</dl>
+			<dd>
+				<ul>
+					<li>2012 Spiel of the Year Winner</li>
+				</ul>
+			</dd>
+		</dl>
 	</footer>
 
 	<aside>
