--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
   <meta name="viewport" content="width=device-width;initial-scale=1">
 </head>
 <body>
-		<article>
+
+<article>
 
 	<header>
 		<h1>Super Epic Tile Layer</h1>
@@ -29,7 +30,7 @@
 
 	<h2>Average Rating:</h2>
 		<meter min="0" max="5" value="4">4/5</meter>
-		<a href="..." rel="[Add to wishlist]">
+		<a href="..." rel="[Add to Whishlist!]">
 		<a href="..." rel="[Add to cart]">
 		<p>You’re an ancient Egyptian God competing against the other gods
 		 to create the perfect landscape for your subjugated peoples.
@@ -97,7 +98,7 @@
 	</article>
 	</aside>
 
-	</article>
+</article>
 
 </body>
 </html>
