--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
 
 	<h2>Average Rating:</h2>
 		<meter min="0" max="5" value="4">4/5</meter>
-		<a href="..." rel="[Add to Whishlist!]">
-		<a href="..." rel="[Add to cart]">
+		<a href="...">[Add to Whishlist!]</a>
+		<a href="...">[Add to cart]</a>
 		<p>You’re an ancient Egyptian God competing against the other gods
 		 to create the perfect landscape for your subjugated peoples.
 		 You and the gods adjust the landscape to best suit your people,
