--- a/index.html
+++ b/index.html
@@ -37,14 +37,16 @@
 		 You and the gods adjust the landscape to best suit your people,
 		 building farms, rivers, cities, villages—and places of worship.
 		 The god with the best—most loved—landscape wins and claims the
-		 whole land.</p>
+		 whole land.
+		</p>
 
 		<p>Super Epic Tile Layer is a tile-placement game where
 		 players draw a random tile and place the piece to continue
 		 the beautiful landscape of the Nile and Nile delta.
 		 Each tile must seamlessly continue the landscape while
 		 getting victory points by claiming important pieces of
-		 countryside and locations.</p>
+		 countryside and locations.
+		</p>
 
 	<footer>
 		<dl>
